<resources>
    <string name="app_name">Todolist</string>
    <string name="task_list">Task List</string>
    <string name="add_a_task">Add a task</string>
    <string name="hint_task_title">Task Title</string>
    <string name="time_hint">Time</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_popup">Cancel</string>
    <string name="ok">OK</string>
    <string name="add">ADD</string>
    <string name="warning">Warning</string>
    <string name="do_you_want_to_delete">Do you want to delete “Classification”, this action can’t be undone.  </string>
    <string name="warnings">Warning</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort by Date</string>
</resources>