<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity">

    <ImageView
        android:id="@+id/ivBackBtn"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvAddTaskText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:text="@string/add_a_task"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivBackBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txvAddTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAddTaskText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEnterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txvAddTitleTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/llSppiner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAddTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEnterTitleTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/time_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="35dp"
        android:id="@+id/llSppiner"
        android:background="@drawable/list_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAddTitle">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sppinerTimeMode"
            android:layout_gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txvAddTitleTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:text="@string/cancel"
            android:id="@+id/txvCancle"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:text="@string/add"
            android:id="@+id/txvAddTask"
            android:layout_margin="10dp"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/primaryColor"
            android:gravity="center"
            android:textSize="14sp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>