<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/ivUoonsLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/filter"/>




            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txttitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/sort"
                    android:fontFamily="@font/rubik_regular"
                    android:textColor="@color/black"/>




            </LinearLayout>

            <TextView
                android:id="@+id/txvMassage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/rubik_regular"
                android:textSize="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout

                    android:layout_width= "70dp"
                    android:layout_height="30dp"

                    android:layout_marginLeft="110dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/btnCancel"
                        android:background="?android:attr/selectableItemBackground"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/cancel_popup"
                        android:textColor="@color/primaryColor"
                        android:textSize="16dp" />
                </LinearLayout>



                <TextView
                    android:visibility="gone"
                    android:id="@+id/btnOk"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/ok"
                    android:textColor="@color/primaryColor"
                    android:textSize="16dp" />

            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>